--- a/Leaflet-Step-1/index.html
+++ b/Leaflet-Step-1/index.html
@@ -13,7 +13,8 @@
   <link rel="stylesheet" type="text/css" href="static/css/style.css">
 </head>
 <body>
-
+  <h1>All Earthquakes from the Past 7 days</h1>
+  <p>source - <a href="https://earthquake.usgs.gov/earthquakes/feed/v1.0/geojson.php" target="_blank">United States Geological Survey (USGS) Earthquake Data</a></p>
   <!-- The div that holds our map -->
   <div id="map"></div>
 
@@ -22,6 +23,7 @@
   <!-- D3 JavaScript -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.3/d3.min.js"></script>
   <!-- Our JavaScript -->
-  <script type="text/javascript" src="static/js/logic.js"></script>
+  <script type="text/javascript" src="./static/js/config.js"></script>
+  <script type="text/javascript" src="./static/js/logic.js"></script>
 </body>
 </html>
